--- a/notas/phdstudies.tex
+++ b/notas/phdstudies.tex
@@ -14,7 +14,7 @@
 \usepackage{amsmath,amsfonts,amssymb,amsthm,mathrsfs}
 \usepackage{extarrows}
 \usepackage{csquotes}
-\usepackage{pgf,tikz,tikz-cd}
+\usepackage{pgf,tikz-cd}
 \usetikzlibrary{babel}
 \usepackage{hyperref}
 \newtheorem{theo}{Theorem}
